--- a/src/pages/AnaliseSolicitacoes/AnaliseSolicitacoes.css
+++ b/src/pages/AnaliseSolicitacoes/AnaliseSolicitacoes.css
@@ -1,20 +1,31 @@
 .analise-solicitacoes-container {
-    margin-top: 20px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .analise-solicitacoes-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .table {
-    margin-top: 20px;
-  }
-  
+  margin-top: 20px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.analise-solicitacoes-container h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.table {
+  margin-top: 20px;
+}
+
+.status-pendente {
+  background-color: orange !important; 
+}
+
+.status-indeferido {
+  background-color: red !important;
+}
+
+.status-deferido {
+  background-color: green !important;
+}
