--- a/src/pages/AnaliseSolicitacoes/AnaliseSolicitacoes.css
+++ b/src/pages/AnaliseSolicitacoes/AnaliseSolicitacoes.css
@@ -22,6 +22,10 @@
   background-color: orange !important; 
 }
 
+.status-efetuado {
+  background-color: green !important;
+}
+
 .status-indeferido {
   background-color: red !important;
 }
